# axon

./: .gitignore  AXON_SPEC.md  Cargo.toml  LICENSE.md  Makefile  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: pages.yml
lib/: code_translator.rs  huffman.rs  lib.rs  translator.rs
lib/tests/: caveman_comparison.rs
playground/: index.html
playground/pkg/: .gitignore  README.md  axon.d.ts  axon.js  axon_bg.wasm  axon_bg.wasm.d.ts  package.json
repl/: Cargo.toml
repl/src/: decoder.rs  main.rs  protocol.rs
skills/axon/: SKILL.md
src/: code_translator.rs  huffman.rs  lib.rs  translator.rs
tests/: code_questions.rs
vscode-extension/: .vscodeignore  README.md  axon-notation-0.2.0.vsix  axon-notation-0.3.0.vsix  esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts  translator.ts
web/: index.html
