[package]
name = "axon-repl"
version = "1.0.0"
edition = "2021"
description = "AXON REPL — interactive translator and decoder"

[[bin]]
name = "axon-repl"
path = "src/main.rs"

[dependencies]
axon = { path = "..", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
